hphp/hack/doc/hack-langspec/tests/Expressions/Yield_Operator/yield.php.expectf

Fatal error: HH mode: content before <?hh (Line: 1, Char: 39)
syntax error, unexpected T_HH_ERROR, expecting $end in %s/tests/Expressions/Yield_Operator/yield.php on line 1